--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -119,10 +119,10 @@
 \newcommand{\ieps}{\ensuremath{k}\xspace}
 \newcommand{\neps}{\ensuremath{K}\xspace}
 \newcommand{\pp}{\ensuremath{p}\xspace}
-\newcommand{\iz}{\ensuremath{l}\xspace}
-\newcommand{\nz}{\ensuremath{L}\xspace}
-\newcommand{\iq}{\ensuremath{m}\xspace}
-\newcommand{\nq}{\ensuremath{M}\xspace}
+\newcommand{\iz}{\ensuremath{m}\xspace}
+\newcommand{\nz}{\ensuremath{M}\xspace}
+\newcommand{\iq}{\ensuremath{l}\xspace}
+\newcommand{\nq}{\ensuremath{L}\xspace}
 \newcommand{\gen}{\text{gen}\xspace}
 \newcommand{\sel}{\text{sel}\xspace}
 \newcommand{\cmc}{\ensuremath{\mbox{$C_\text{MC}$}}\xspace}
