--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,17 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Karbach:2012vg,
+      author         = "Karbach, Till Moritz and Schlupp, Maximilian",
+      title          = "{Constraints on Yield Parameters in Extended Maximum
+                        Likelihood Fits}",
+      year           = "2012",
+      eprint         = "1210.7141",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.data-an",
+      SLACcitation   = "%%CITATION = ARXIV:1210.7141;%%"
+}
+
 @article{Aduszkiewicz:2015dmr,
       author         = "Aduszkiewicz, A. and others",
       title          = "{Production of $\Lambda $ -hyperons in inelastic p+p
